--- a/html/KP-APP-D-SC-1006.html
+++ b/html/KP-APP-D-SC-1006.html
@@ -58,7 +58,8 @@
             </div>
           </li>
           <li>
-            <a href="KP-APP-D-SC-1008.html">(필수) 개인정보 수집 및 이용동의
+            <a href="KP-APP-D-SC-1008.html">
+              (필수) 개인정보 수집 및 이용동의
               <svg version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
                 <path class="st0" d="M41.7,25l-5.9,5.9L55,50L35.9,69.1l5.9,5.9l25-25L41.7,25z" />
               </svg>
