--- a/html/KP-APP-D-SC-1007.html
+++ b/html/KP-APP-D-SC-1007.html
@@ -610,15 +610,11 @@
           <dt>제19조 (분쟁해결 및 관할법원)</dt>
           <dd class="use-num">
             <span>①</span>
-            서비스이용과관련하여우정사업본부와회원사이에분쟁이발생
-            한경우, 우선 쌍방간에 분쟁의 해결을 위해 성실히 노력하
-            여야 합니다.
+            서비스 이용과 관련하여 우정사업본부와 회원 사이에 분쟁이 발생한 경우, 우선 쌍방간에 분쟁의 해결을 위해 성실히 노력하여야 합니다.
           </dd>
           <dd class="use-num">
             <span>②</span>
-            전1항의 노력에서도 분쟁이 해결되지 않을 경우, 관할법
-            원은 우정사업본부 본점 소재지를 관할하는 법원을 전속
-            관할법원으로 합니다.
+            전1항의 노력에서도 분쟁이 해결되지 않을 경우, 관할법원은 우정사업본부 본점 소재지를 관할하는 법원을 전속관할법원으로 합니다.
           </dd>
         </dl>
 
