--- a/html/KP-APP-D-SC-1009.html
+++ b/html/KP-APP-D-SC-1009.html
@@ -21,8 +21,8 @@
 </head>
 
 <body>
-  <div class="m27 wrapper">
-    <div class="top-nav">
+  <div class="m27 wrapper flex-column-box">
+    <div class="top-nav flex-wrapper">
       <div class="icon-txt another">
         <a href="KP-APP-D-SC-1006.html">
           <div class="top-iconClose"><img src="../img/ic_close.svg" alt="닫기"></div>
@@ -31,21 +31,112 @@
       </div>
     </div>
     <!-- End of Header Section -->
-    <div class="terms-container top-4">
-      <div class="terms-txt privercy">
-        <textarea>
-제1조 목적
-이 약관은 우정사업본부가 운영하는 우체국 앱(이하 "우체국”이라 한다)에서 제공하는 재화 및 용역 관련 서비스(이하 ＂서비스＂라 한다.)를 이용함에 있어 우체국 앱과 이용자의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.
-          
-제2조 용어의 정의
-본 약관에서 사용하는 용어의 정의는 다음과 같습니다.
-          
-우정통합인증앱 : 개인의 신원, 자격, 경력 등 개인의 속성과 관련된 정보(이하 '신원등' 이라 한다)에 대한 인증을 거쳐 발급된 크레덴셜 등을 사용자의 모바일 기기에 안전하게 저장, 관리 및 제출할 수 있는 기능을 제공하는 블록체인 기반의 신원증명 모바일 애플리케이션을 말합니다.
+    <div class="terms-container overflow-container flex-column-box">
+      <div class="terms-tit">
+        <div class="terms-date">
+          <p>시행일 2022.01.17</p>
+        </div>
+      </div>
+      <!-- Article Section -->
+      <div class="terms-txt scroll-box">
+        <div class="policy-box">
+          <!-- 개인정보 제 3자 제공 동의 (2022-01-17) : 개인정보처리방침 4항, 6항-->
+          <dl>
+            <dt>1. 개인정보의 제3자 제공</dt>
+            <dd>
+              우정사업본부는 고객의 개인정보를 처리 목적에 명시한 범위 내에서만
+              처리합니다. 다만, 고객의 동의, 법률의 특별한 규정 등 아래에
+              해당하는 경우에는 개인정보를 제3자에게 제공합니다.
+            </dd>
+            <dd>
+              <ol>
+                <li>
+                  <h4>
+                    <label>가.</label>
+                    개인정보 제3자 제공 기준
+                  </h4>
+                  <ul class="child-list dot-list">
+                    <li>고객으로부터 별도의 동의를 받은 경우</li>
+                    <li>법률 등에 특별한 규정이 있는 경우</li>
+                    <li>
+                      사람의 생명 및 신체에 긴급한 위험이 발생한 경우에
+                      정보주체의 동의를 받을 수 없는 정당한 사유가 있는 경우
+                    </li>
+                    <li>
+                      통계작성 및 학술연구 등의 목적을 위하여 필요한 경우로서
+                      특정 개인을 알아볼 수 없는 형태로 개인정보를 제공하는 경우
+                    </li>
+                    <li>
+                      범죄의 수사와 공소의 제기 및 유지를 위하여 필요한 경우
+                    </li>
+                    <li>법원의 재판업무 수행을 위하여 필요한 경우</li>
+                  </ul>
+                </li>
+                <li>
+                  <h4>
+                    <label>나.</label>
+                    개인정보 제3자 제공 현황 기준
+                  </h4>
+                  <ul class="child-list dot-list">
+                    <li>해당사항 없음</li>
+                  </ul>
+                </li>
+              </ol>
+            </dd>
+          </dl>
 
-우정통합인증앱 : 개인의 신원, 자격, 경력 등 개인의 속성과 관련된 정보(이하 '신원등' 이라 한다)에 대한 인증을 거쳐 발급된 크레덴셜 등을 사용자의 모바일 기기에 안전하게 저장, 관리 및 제출할 수 있는 기능을 제공하는 블록체인 기반의 신원증명 모바일 애플리케이션을 말합니다.우정통합인증앱 : 개인의 신원, 자격, 경력 등 개인의 속성과관련된 정보(이하 '신원등' 이라 한다)에 대한 인증을 거쳐발급된 크레덴셜 등을 사용자의 모바일 기기에 안전하게 저장, 관리 및 제출할 수 있는 기능을 제공하는 블록체인 기반의 신원증명 모바일 애플리케이션을 말합니다.명 모바일 애플리케이션을 말합니다.관리 및 제출할 수 있는 기능을 제공하는 블록체인 기반의 신원증명 모바일 애플리케이션
-        </textarea>
+          <dl>
+            <dt>2. 개인정보 처리의 위탁</dt>
+            <dd>
+              우정사업본부는 원활한 개인정보의 업무처리를 위하여 고객이 동의한
+              목적 또는 계약의 체결·유지·이행·관리 등의 목적으로 다음과 같이
+              개인정보 처리업무를 위탁하고 있습니다.
+              <ol>
+                <li>
+                  <h4>
+                    <label>가.</label>
+                    개인정보 위탁 현황
+                  </h4>
+                </li>
+              </ol>
+
+              <table>
+                <tr>
+                  <th>수탁업체</th>
+                  <th>위탁업무 내용</th>
+                  <th class="no-border">보유 및 이용기간</th>
+                </tr>
+                <tr>
+                  <td>(재)한국우편사업우정진흥원</td>
+                  <td>
+                    우체국쇼핑, 우편국예금, 우체국 보험, 전자우편 위탁 제작 등
+                    우정사업본부 제공 서비스 상품에 대한 홍보
+                  </td>
+                  <td rowspan="3" class="no-border">
+                    회원 탈퇴 또는 위탁 계약 만료 시 까지
+                  </td>
+                </tr>
+                <tr>
+                  <td>(재)한국우편사업진흥원</td>
+                  <td>
+                    우정사업 관련 위탁사무 수행(우체국 쇼핑, 전자우편제작, 우정
+                    빅데이터·인공지능 부대사업 등)
+                  </td>
+                </tr>
+                <tr>
+                  <td>한국모바일인증(주)</td>
+                  <td>본인확인(휴대폰인증)</td>
+                </tr>
+              </table>
+              위탁업무의 내용이나 위탁업체가 변경될 경우에는 지체 없이 본
+              개인정보처리방침을 통하여 공개하도록 하겠습니다.
+            </dd>
+          </dl>
+        </div>
         <div class="box-shadow"></div>
-
+      </div>
+      <div class="btn-app">
+        <button type="button" class="btn-select">동의합니다</button>
       </div>
     </div>
   </div>
