--- a/html/KP-APP-D-SC-1010.html
+++ b/html/KP-APP-D-SC-1010.html
@@ -21,8 +21,8 @@
 </head>
 
 <body>
-  <div class="m27 wrapper">
-    <div class="top-nav">
+  <div class="m27 wrapper flex-column-box">
+    <div class="top-nav flex-wrapper">
       <div class="icon-txt another">
         <a href="KP-APP-D-SC-1006.html">
           <div class="top-iconClose"><img src="../img/ic_close.svg" alt="닫기"></div>
@@ -31,20 +31,36 @@
       </div>
     </div>
     <!-- End of Header Section -->
-    <div class="terms-container top-4">
-      <div class="terms-txt privercy">
-        <textarea>
-제1조 목적
-이 약관은 우정사업본부가 운영하는 우체국 앱(이하 "우체국”이라 한다)에서 제공하는 재화 및 용역 관련 서비스(이하 ＂서비스＂라 한다.)를 이용함에 있어 우체국 앱과 이용자의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.
-          
-제2조 용어의 정의
-본 약관에서 사용하는 용어의 정의는 다음과 같습니다.
-          
-우정통합인증앱 : 개인의 신원, 자격, 경력 등 개인의 속성과 관련된 정보(이하 '신원등' 이라 한다)에 대한 인증을 거쳐 발급된 크레덴셜 등을 사용자의 모바일 기기에 안전하게 저장, 관리 및 제출할 수 있는 기능을 제공하는 블록체인 기반의 신원증명 모바일 애플리케이션을 말합니다.
-
-우정통합인증앱 : 개인의 신원, 자격, 경력 등 개인의 속성과 관련된 정보(이하 '신원등' 이라 한다)에 대한 인증을 거쳐 발급된 크레덴셜 등을 사용자의 모바일 기기에 안전하게 저장, 관리 및 제출할 수 있는 기능을 제공하는 블록체인 기반의 신원증명 모바일 애플리케이션을 말합니다.우정통합인증앱 : 개인의 신원, 자격, 경력 등 개인의 속성과관련된 정보(이하 '신원등' 이라 한다)에 대한 인증을 거쳐발급된 크레덴셜 등을 사용자의 모바일 기기에 안전하게 저장, 관리 및 제출할 수 있는 기능을 제공하는 블록체인 기반의 신원증명 모바일 애플리케이션을 말합니다.명 모바일 애플리케이션을 말합니다.관리 및 제출할 수 있는 기능을 제공하는 블록체인 기반의 신원증명 모바일 애플리케이션
-        </textarea>
+    <div class="terms-container overflow-container flex-column-box">
+      <div class="terms-tit">
+        <div class="terms-date">
+          <p>시행일 2022.01.17</p>
+        </div>
+      </div>
+      <!-- Article Section -->
+      <div class="terms-txt scroll-box">
+        <div class="policy-box">
+          <!-- 마케팅/홍보의 개인정보 이용동의 (2022-01-17) : 이용약관 7초 -->
+          <dl>
+            <dt>각종 정보의 제공</dt>
+            <dd class="use-num">
+              <span>①</span>
+              우정사업본부는 회원에게 “서비스”의 다양한 데이터, 서비스, 이벤트
+              등의 소개와 안내를 E-Mail, 무선단문메시지(SMS) 및 기타의 방법을
+              통해 제공할 수 있습니다.
+            </dd>
+            <dd class="use-num">
+              <span>②</span>
+              회원의 개인정보는 관련 법률이 정하는 바에 따라 엄격히 관리되며,
+              회원은 원하지 않는 경우 우정사업본부가 제공하는 정보의 수신을
+              거부할 수 있습니다.
+            </dd>
+          </dl>
+        </div>
         <div class="box-shadow"></div>
+      </div>
+      <div class="btn-app">
+        <button type="button" class="btn-select">동의합니다</button>
       </div>
     </div>
   </div>
